syntax = "proto3";
package com.ascend.proto;
option java_package = "com.ascend.proto";
option java_multiple_files = true;
//option java_generic_services = true;
option java_outer_classname = "Greetings";

message Greeting{
  string greeting = 1;
}

message GreetingRequest {
  Greeting greeting = 1;
}

message GreetingResponse {
  string result = 1;
}

message SumElements{
  int32 firstNumber = 1;
  int32 secondNumnber = 2;
}

message SumRequest{
  SumElements sumElement = 1;
}

message SumResponse {
  int32 result = 1;
}

service GreetingService {
  rpc Hello(GreetingRequest) returns (GreetingResponse);
  rpc Sum(SumRequest) returns (SumResponse);
}

